Added gitignore pickle

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # ignore the texts to avoid large github upload. PN
 p1-texts/novels/
 p2-texts/
-
+# ignore pickle file
+*.pickle
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
